# tracing-loki

./: CLAUDE.md  Cargo.toml  README.md
.specify/memory/: constitution.md
examples/: shutdown.rs
loki-api/: Cargo.toml
loki-api/generate/: Cargo.toml
specs/001-mock-loki-integration-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mock-loki-integration-tests/checklists/: requirements.md
specs/002-plain-text-format/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-plain-text-format/checklists/: requirements.md
specs/003-flume-channel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-flume-channel/checklists/: requirements.md
specs/003-flume-channel/contracts/: public-api.md
specs/004-otel-fields/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-otel-fields/checklists/: requirements.md
specs/004-otel-fields/contracts/: public-api.md
src/: builder.rs  labels.rs  lib.rs  no_subscriber.rs
tests/: integration.rs
