[workspace]
members = [
  "loki-api",
  "loki-api/generate",
]

[package]
name = "tracing-loki"
description = "A tracing layer for shipping logs to Grafana Loki"
authors = ["hrxi <hrrrxi@gmail.com>"]
repository = "https://github.com/hrxi/tracing-loki"
keywords = ["tracing", "loki"]
version = "0.2.6"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
loki-api = { version = "0.1.0", path = "loki-api" }
reqwest = { version = "0.13", default-features = false }
snap = "1.0.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
flume = "0.12"
tokio = { version = "1.50.0", features = ["time"] }
tracing = "0.1.32"
tracing-core = "0.1.23"
tracing-log = ">=0.1.2,<0.3.0"
tracing-serde = ">=0.1.3,<0.3.0"
tracing-subscriber = "0.3.9"
url = "2.2.2"
opentelemetry = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[dev-dependencies]
axum = "0.8"
loki-api = { path = "loki-api" }
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
prost = "0.14"
serde_json = "1.0.79"
snap = "1.0.5"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net"] }
tracing-opentelemetry = "0.32"

[features]
default = ["compat-0-2-1", "native-tls"]
compat-0-2-1 = []
opentelemetry = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
